# statistical-arbitrage-bot

./: .env.example  .eslintrc.json  .gitignore  .prettierrc.json  bun.lockb  config.ts  docker-compose.yml  package.json  pnpm-lock.yaml  readme.md  requirements.txt  test.html  tsconfig.json
apps/api/: .gitignore  docker-compose.yml  package.json  pyproject.toml
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20230718123224_add_user_model/: migration.sql
apps/api/prisma/migrations/20230719102356_add_api_key_and_stark_key_model/: migration.sql
apps/api/prisma/migrations/20230723124227_add_market_model/: migration.sql
apps/api/prisma/migrations/20230723134214_add_active_order_model/: migration.sql
apps/api/prisma/migrations/20230723151646_unique_market_id/: migration.sql
apps/api/prisma/migrations/20230723164343_add_account_model/: migration.sql
apps/api/python/: cointegration.py
apps/api/src/: app.module.ts  cli.ts  config.ts  main.ts
apps/api/src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts
apps/api/src/auth/dto/: signin.dto.ts  signup.dto.ts
apps/api/src/backtest/: backtest.command.ts  backtest.module.ts
apps/api/src/coint/: coint.module.ts  coint.service.ts
apps/api/src/commands/: backtest.command.ts  commands.module.ts  task.questions.ts
apps/api/src/dydx/: dydx.controller.ts  dydx.module.ts  dydx.processor.ts  dydx.service.ts  dydx.websocket.ts
apps/api/src/market-data/: market-data.controller.ts  market-data.module.ts  market-data.service.ts
apps/api/src/prisma/: prisma.service.ts
src/: bot.ts  (+4 more)
(+76 files in other folders)
