[tool.poetry]
name = "coint"
version = "0.1.0"
description = ""
authors = ["soheil <soheilrasekh555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"
statsmodels = "^0.14.0"
simplejson = "^3.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
